# horizonfetch

./: .gitignore  README.md
horizonfetch-linux/: Cargo.toml  README.md  hf.conf
horizonfetch-linux/src/: config.rs  display.rs  main.rs  system.rs
